<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <ImageButton
        android:id="@+id/signOutButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/transparent"
        android:src="@drawable/sign_out"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        android:contentDescription="@string/meditationImage"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/heroImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/transparent"
        app:cardCornerRadius="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="294dp"
            android:scaleType="centerCrop"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:src="@drawable/meditate_inside"
            android:contentDescription="@string/meditationImage"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/homeTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moreMindfulYou"
        android:textSize="30sp"
        android:textColor="@color/primaryAccent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroImage" />

    <TextView
        android:id="@+id/homesubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildingME"
        android:textSize="17sp"
        android:textColor="@color/secondaryAccent"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroImage" />

</androidx.constraintlayout.widget.ConstraintLayout>